Correction et ajjustement des tests  et revue global